--- a/src/navigator/style.css
+++ b/src/navigator/style.css
@@ -1,18 +1,3 @@
- /* body {
-	 height: 100%;
-	 width: 100%;
-  padding-bottom:20px;
-  background:#b8c0ca;
-	color:#666;
-} */
-
-/* .container-main{
-	margin-top: 20px; 
-	background:#f4f4f4;
-	padding: 10px;
-	/* overflow:auto;
-	border-radius:10px;
-} */
 .App-header {
 	height: 100px;
 	background: black;
@@ -49,14 +34,18 @@
 	position: absolute;
 	list-style: none;
 	align-items: center;
-	bottom: 70px;
+	/* bottom: 70px; */
 	margin-left: 30px;
 }
 .footer li {
 	display: inline;
-	padding: 30px;
+	padding: 0 30px 0 30px;
 	align-items: center;
 	color: #b8c0ca;
+}
+.footer {
+	background: none;
+	height: 30px;
 }
 .footer li a {
 	color: #b8c0ca;
