--- a/src/home-page/index.css
+++ b/src/home-page/index.css
@@ -2,8 +2,17 @@
   margin-top:10px;
 }
 .home-left-side {
-  height: 500px;
+  height: 450px;
 }
-.home-right-side {
+/* .home-right-side {
   height: 500px;
+} */
+.input-filter {
+  width: 100%;
+  font-size: 1.5em;
+  height: 2em;
+}
+.input-filter::placeholder {
+  font-size: 14px;
+  font-weight: bold;
 }
