Add articles found

--- a/src/home-page/index.css
+++ b/src/home-page/index.css
@@ -4,9 +4,9 @@
 .home-left-side {
   height: 450px;
 }
-/* .home-right-side {
+.home-right-side {
   height: 500px;
-} */
+}
 .input-filter {
   width: 100%;
   font-size: 1.5em;
