--- a/src/navigator/style.css
+++ b/src/navigator/style.css
@@ -19,3 +19,17 @@
 .footer li a:hover {
 	color: blue;
 }
+.not-found {
+	text-align: center; 
+}
+.not-found h1{
+	font-size: 150px;
+	/* text-indent: 10px; */
+	letter-spacing: 100px;
+	color: #EB4728;
+}
+.not-found p {
+	letter-spacing: 10px;
+	color:cyan;
+	font-size:20px;
+}
